tests/NormalTests/paczka1/fuzzy1/28593546.err
Error in line 1: A337 S0 85,1
Error in line 5: ZAt24hjobQb S0 28,5
Error in line 12: A337 S0 15,4
Error in line 13: YwDJ32 S0 46,1
Error in line 14: YwDJ32 S0 77,9
Error in line 15: A337 S0 24,5
Error in line 16: ZAt24hjobQb S0 100,6
Error in line 18: YwDJ32 S0 80,0
Error in line 19: Xixz S0 67,2
Error in line 17: Yj7S A604 81,1
Error in line 22: Xixz S0 132,4
Error in line 25: ?S0
Error in line 32: VWg03gwU S0 62,3
Error in line 37: A337 S0 58,5
Error in line 39: A337 S0 256,2
